--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-	"name": "product-list-react",
-	"version": "0.1.0",
+	"name": "pantone-colors-react",
+	"version": "1.0.0",
+	"homepage": "https://pfmnowak.github.io/pantone-colors-react/",
 	"private": true,
 	"dependencies": {
 		"@emotion/react": "^11.10.5",
@@ -23,6 +24,8 @@
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
@@ -45,6 +48,7 @@
 	"devDependencies": {
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-prettier": "^4.2.1",
+		"gh-pages": "^5.0.0",
 		"prettier": "2.8.3"
 	}
 }
