--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@types/node": "^16.18.11",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.10",
+		"axios": "^1.3.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router": "^6.7.0",
@@ -48,6 +49,7 @@
 	"devDependencies": {
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-react-hooks": "^4.6.0",
 		"gh-pages": "^5.0.0",
 		"prettier": "2.8.3"
 	}
