--- a/package.json
+++ b/package.json
@@ -51,6 +51,12 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"gh-pages": "^5.0.0",
+		"msw": "^1.0.1",
 		"prettier": "2.8.3"
+	},
+	"jest": {
+		"moduleNameMapper": {
+			"axios": "axios/dist/node/axios.cjs"
+		}
 	}
 }
